y.output
Terminals unused in grammar

    STOP
    ESCAPE


State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 $@2: ε

    3 program: $@1 stmts $@2

    4 stmts: stmts stmt
    5      | stmt

    6 add_exp: mul_exp
    7        | add_exp ADD add_exp
    8        | add_exp SUB add_exp

    9 mul_exp: exp
   10        | mul_exp MUL mul_exp
   11        | mul_exp DIV mul_exp

   12 exp: NUM
   13    | SUB exp
   14    | L_PAREN add_exp R_PAREN
   15    | rel_exp
   16    | function_call
   17    | IDENTIFIER
   18    | IDENTIFIER LB add_exp RB

   19 rel_exp: exp REL exp

   20 stmt: assignment
   21     | WRITE L_PAREN IDENTIFIER R_PAREN SEMICOLON
   22     | READ L_PAREN IDENTIFIER R_PAREN SEMICOLON
   23     | declaration
   24     | when_stmt
   25     | whilst_stmt
   26     | dowhilst_stmt
   27     | function
   28     | return_stmt

   29 return_stmt: RETURN SEMICOLON
   30            | RETURN add_exp SEMICOLON

   31 when_stmt: WHEN L_PAREN add_exp R_PAREN LC stmts RC
   32          | WHEN L_PAREN add_exp R_PAREN LC stmts RC ELSE LC stmts RC
   33          | WHEN L_PAREN add_exp R_PAREN LC stmts RC ELSE when_stmt

   34 whilst_stmt: WHILST L_PAREN add_exp R_PAREN LC stmts RC
   35            | WHILST L_PAREN add_exp R_PAREN LC RC

   36 dowhilst_stmt: DO LC stmts RC WHILST exp
   37              | DO LC RC WHILST exp

   38 $@3: ε

   39 function: type IDENTIFIER QM param_type_list $@3 QM LC stmts RC

   40 function_call: IDENTIFIER QM param_list QM

   41 param_type_list: type IDENTIFIER COMMA param_type_list
   42                | type IDENTIFIER LB RB COMMA param_type_list
   43                | type IDENTIFIER
   44                | type IDENTIFIER LB RB

   45 param_list: add_exp COMMA
   46           | add_exp
   47           | ε

   48 type: VOID
   49     | INT

   50 declaration: type IDENTIFIER SEMICOLON
   51            | type IDENTIFIER LB NUM RB SEMICOLON

   52 assignment: IDENTIFIER ASSIGN add_exp SEMICOLON
   53           | IDENTIFIER LB add_exp RB ASSIGN add_exp SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <identifier> (258) 12 51
    IDENTIFIER <identifier> (259) 17 18 21 22 39 40 41 42 43 44 50 51 52 53
    L_PAREN (260) 14 21 22 31 32 33 34 35
    R_PAREN (261) 14 21 22 31 32 33 34 35
    LC (262) 31 32 33 34 35 36 37 39
    RC (263) 31 32 33 34 35 36 37 39
    RB (264) 18 42 44 51 53
    LB (265) 18 42 44 51 53
    WHEN (266) 31 32 33
    ELSE (267) 32 33
    WHILST (268) 34 35 36 37
    DO (269) 36 37
    STOP (270)
    READ (271) 22
    WRITE (272) 21
    VOID (273) 48
    INT (274) 49
    RETURN (275) 29 30
    ASSIGN (276) 52 53
    QM (277) 39 40
    ESCAPE (278)
    SEMICOLON (279) 21 22 29 30 50 51 52 53
    COMMA (280) 41 42 45
    ADD (281) 7
    SUB (282) 8 13
    MUL (283) 10
    DIV (284) 11
    REL <identifier> (285) 19


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 3
        on right: 0
    $@1 (33)
        on left: 1
        on right: 3
    $@2 (34)
        on left: 2
        on right: 3
    stmts (35)
        on left: 4 5
        on right: 3 4 31 32 33 34 36 39
    add_exp <identifier> (36)
        on left: 6 7 8
        on right: 7 8 14 18 30 31 32 33 34 35 45 46 52 53
    mul_exp <identifier> (37)
        on left: 9 10 11
        on right: 6 10 11
    exp <identifier> (38)
        on left: 12 13 14 15 16 17 18
        on right: 9 13 19 36 37
    rel_exp <identifier> (39)
        on left: 19
        on right: 15
    stmt (40)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 4 5
    return_stmt (41)
        on left: 29 30
        on right: 28
    when_stmt (42)
        on left: 31 32 33
        on right: 24 33
    whilst_stmt <identifier> (43)
        on left: 34 35
        on right: 25
    dowhilst_stmt (44)
        on left: 36 37
        on right: 26
    function (45)
        on left: 39
        on right: 27
    $@3 (46)
        on left: 38
        on right: 39
    function_call <identifier> (47)
        on left: 40
        on right: 16
    param_type_list (48)
        on left: 41 42 43 44
        on right: 39 41 42
    param_list (49)
        on left: 45 46 47
        on right: 40
    type (50)
        on left: 48 49
        on right: 39 41 42 43 44 50 51
    declaration (51)
        on left: 50 51
        on right: 23
    assignment (52)
        on left: 52 53
        on right: 20


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    3 program: $@1 • stmts $@2

    IDENTIFIER  shift, and go to state 4
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    stmts          go to state 13
    stmt           go to state 14
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 3

    0 $accept: program $end •

    $default  accept


State 4

   52 assignment: IDENTIFIER • ASSIGN add_exp SEMICOLON
   53           | IDENTIFIER • LB add_exp RB ASSIGN add_exp SEMICOLON

    LB      shift, and go to state 23
    ASSIGN  shift, and go to state 24


State 5

   31 when_stmt: WHEN • L_PAREN add_exp R_PAREN LC stmts RC
   32          | WHEN • L_PAREN add_exp R_PAREN LC stmts RC ELSE LC stmts RC
   33          | WHEN • L_PAREN add_exp R_PAREN LC stmts RC ELSE when_stmt

    L_PAREN  shift, and go to state 25


State 6

   34 whilst_stmt: WHILST • L_PAREN add_exp R_PAREN LC stmts RC
   35            | WHILST • L_PAREN add_exp R_PAREN LC RC

    L_PAREN  shift, and go to state 26


State 7

   36 dowhilst_stmt: DO • LC stmts RC WHILST exp
   37              | DO • LC RC WHILST exp

    LC  shift, and go to state 27


State 8

   22 stmt: READ • L_PAREN IDENTIFIER R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 28


State 9

   21 stmt: WRITE • L_PAREN IDENTIFIER R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 29


State 10

   48 type: VOID •

    $default  reduce using rule 48 (type)


State 11

   49 type: INT •

    $default  reduce using rule 49 (type)


State 12

   29 return_stmt: RETURN • SEMICOLON
   30            | RETURN • add_exp SEMICOLON

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SEMICOLON   shift, and go to state 33
    SUB         shift, and go to state 34

    add_exp        go to state 35
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 13

    3 program: $@1 stmts • $@2
    4 stmts: stmts • stmt

    IDENTIFIER  shift, and go to state 4
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    $default  reduce using rule 2 ($@2)

    $@2            go to state 40
    stmt           go to state 41
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 14

    5 stmts: stmt •

    $default  reduce using rule 5 (stmts)


State 15

   28 stmt: return_stmt •

    $default  reduce using rule 28 (stmt)


State 16

   24 stmt: when_stmt •

    $default  reduce using rule 24 (stmt)


State 17

   25 stmt: whilst_stmt •

    $default  reduce using rule 25 (stmt)


State 18

   26 stmt: dowhilst_stmt •

    $default  reduce using rule 26 (stmt)


State 19

   27 stmt: function •

    $default  reduce using rule 27 (stmt)


State 20

   39 function: type • IDENTIFIER QM param_type_list $@3 QM LC stmts RC
   50 declaration: type • IDENTIFIER SEMICOLON
   51            | type • IDENTIFIER LB NUM RB SEMICOLON

    IDENTIFIER  shift, and go to state 42


State 21

   23 stmt: declaration •

    $default  reduce using rule 23 (stmt)


State 22

   20 stmt: assignment •

    $default  reduce using rule 20 (stmt)


State 23

   53 assignment: IDENTIFIER LB • add_exp RB ASSIGN add_exp SEMICOLON

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 43
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 24

   52 assignment: IDENTIFIER ASSIGN • add_exp SEMICOLON

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 44
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 25

   31 when_stmt: WHEN L_PAREN • add_exp R_PAREN LC stmts RC
   32          | WHEN L_PAREN • add_exp R_PAREN LC stmts RC ELSE LC stmts RC
   33          | WHEN L_PAREN • add_exp R_PAREN LC stmts RC ELSE when_stmt

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 45
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 26

   34 whilst_stmt: WHILST L_PAREN • add_exp R_PAREN LC stmts RC
   35            | WHILST L_PAREN • add_exp R_PAREN LC RC

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 46
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 27

   36 dowhilst_stmt: DO LC • stmts RC WHILST exp
   37              | DO LC • RC WHILST exp

    IDENTIFIER  shift, and go to state 4
    RC          shift, and go to state 47
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    stmts          go to state 48
    stmt           go to state 14
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 28

   22 stmt: READ L_PAREN • IDENTIFIER R_PAREN SEMICOLON

    IDENTIFIER  shift, and go to state 49


State 29

   21 stmt: WRITE L_PAREN • IDENTIFIER R_PAREN SEMICOLON

    IDENTIFIER  shift, and go to state 50


State 30

   12 exp: NUM •

    $default  reduce using rule 12 (exp)


State 31

   17 exp: IDENTIFIER •
   18    | IDENTIFIER • LB add_exp RB
   40 function_call: IDENTIFIER • QM param_list QM

    LB  shift, and go to state 51
    QM  shift, and go to state 52

    QM        [reduce using rule 17 (exp)]
    $default  reduce using rule 17 (exp)


State 32

   14 exp: L_PAREN • add_exp R_PAREN

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 53
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 33

   29 return_stmt: RETURN SEMICOLON •

    $default  reduce using rule 29 (return_stmt)


State 34

   13 exp: SUB • exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    exp            go to state 54
    rel_exp        go to state 38
    function_call  go to state 39


State 35

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   30 return_stmt: RETURN add_exp • SEMICOLON

    SEMICOLON  shift, and go to state 55
    ADD        shift, and go to state 56
    SUB        shift, and go to state 57


State 36

    6 add_exp: mul_exp •
   10 mul_exp: mul_exp • MUL mul_exp
   11        | mul_exp • DIV mul_exp

    MUL  shift, and go to state 58
    DIV  shift, and go to state 59

    $default  reduce using rule 6 (add_exp)


State 37

    9 mul_exp: exp •
   19 rel_exp: exp • REL exp

    REL  shift, and go to state 60

    $default  reduce using rule 9 (mul_exp)


State 38

   15 exp: rel_exp •

    $default  reduce using rule 15 (exp)


State 39

   16 exp: function_call •

    $default  reduce using rule 16 (exp)


State 40

    3 program: $@1 stmts $@2 •

    $default  reduce using rule 3 (program)


State 41

    4 stmts: stmts stmt •

    $default  reduce using rule 4 (stmts)


State 42

   39 function: type IDENTIFIER • QM param_type_list $@3 QM LC stmts RC
   50 declaration: type IDENTIFIER • SEMICOLON
   51            | type IDENTIFIER • LB NUM RB SEMICOLON

    LB         shift, and go to state 61
    QM         shift, and go to state 62
    SEMICOLON  shift, and go to state 63


State 43

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   53 assignment: IDENTIFIER LB add_exp • RB ASSIGN add_exp SEMICOLON

    RB   shift, and go to state 64
    ADD  shift, and go to state 56
    SUB  shift, and go to state 57


State 44

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   52 assignment: IDENTIFIER ASSIGN add_exp • SEMICOLON

    SEMICOLON  shift, and go to state 65
    ADD        shift, and go to state 56
    SUB        shift, and go to state 57


State 45

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   31 when_stmt: WHEN L_PAREN add_exp • R_PAREN LC stmts RC
   32          | WHEN L_PAREN add_exp • R_PAREN LC stmts RC ELSE LC stmts RC
   33          | WHEN L_PAREN add_exp • R_PAREN LC stmts RC ELSE when_stmt

    R_PAREN  shift, and go to state 66
    ADD      shift, and go to state 56
    SUB      shift, and go to state 57


State 46

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   34 whilst_stmt: WHILST L_PAREN add_exp • R_PAREN LC stmts RC
   35            | WHILST L_PAREN add_exp • R_PAREN LC RC

    R_PAREN  shift, and go to state 67
    ADD      shift, and go to state 56
    SUB      shift, and go to state 57


State 47

   37 dowhilst_stmt: DO LC RC • WHILST exp

    WHILST  shift, and go to state 68


State 48

    4 stmts: stmts • stmt
   36 dowhilst_stmt: DO LC stmts • RC WHILST exp

    IDENTIFIER  shift, and go to state 4
    RC          shift, and go to state 69
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    stmt           go to state 41
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 49

   22 stmt: READ L_PAREN IDENTIFIER • R_PAREN SEMICOLON

    R_PAREN  shift, and go to state 70


State 50

   21 stmt: WRITE L_PAREN IDENTIFIER • R_PAREN SEMICOLON

    R_PAREN  shift, and go to state 71


State 51

   18 exp: IDENTIFIER LB • add_exp RB

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 72
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 52

   40 function_call: IDENTIFIER QM • param_list QM

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    $default  reduce using rule 47 (param_list)

    add_exp        go to state 73
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39
    param_list     go to state 74


State 53

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   14 exp: L_PAREN add_exp • R_PAREN

    R_PAREN  shift, and go to state 75
    ADD      shift, and go to state 56
    SUB      shift, and go to state 57


State 54

   13 exp: SUB exp •
   19 rel_exp: exp • REL exp

    $default  reduce using rule 13 (exp)


State 55

   30 return_stmt: RETURN add_exp SEMICOLON •

    $default  reduce using rule 30 (return_stmt)


State 56

    7 add_exp: add_exp ADD • add_exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 76
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 57

    8 add_exp: add_exp SUB • add_exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 77
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 58

   10 mul_exp: mul_exp MUL • mul_exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    mul_exp        go to state 78
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 59

   11 mul_exp: mul_exp DIV • mul_exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    mul_exp        go to state 79
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 60

   19 rel_exp: exp REL • exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    exp            go to state 80
    rel_exp        go to state 38
    function_call  go to state 39


State 61

   51 declaration: type IDENTIFIER LB • NUM RB SEMICOLON

    NUM  shift, and go to state 81


State 62

   39 function: type IDENTIFIER QM • param_type_list $@3 QM LC stmts RC

    VOID  shift, and go to state 10
    INT   shift, and go to state 11

    param_type_list  go to state 82
    type             go to state 83


State 63

   50 declaration: type IDENTIFIER SEMICOLON •

    $default  reduce using rule 50 (declaration)


State 64

   53 assignment: IDENTIFIER LB add_exp RB • ASSIGN add_exp SEMICOLON

    ASSIGN  shift, and go to state 84


State 65

   52 assignment: IDENTIFIER ASSIGN add_exp SEMICOLON •

    $default  reduce using rule 52 (assignment)


State 66

   31 when_stmt: WHEN L_PAREN add_exp R_PAREN • LC stmts RC
   32          | WHEN L_PAREN add_exp R_PAREN • LC stmts RC ELSE LC stmts RC
   33          | WHEN L_PAREN add_exp R_PAREN • LC stmts RC ELSE when_stmt

    LC  shift, and go to state 85


State 67

   34 whilst_stmt: WHILST L_PAREN add_exp R_PAREN • LC stmts RC
   35            | WHILST L_PAREN add_exp R_PAREN • LC RC

    LC  shift, and go to state 86


State 68

   37 dowhilst_stmt: DO LC RC WHILST • exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    exp            go to state 87
    rel_exp        go to state 38
    function_call  go to state 39


State 69

   36 dowhilst_stmt: DO LC stmts RC • WHILST exp

    WHILST  shift, and go to state 88


State 70

   22 stmt: READ L_PAREN IDENTIFIER R_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 89


State 71

   21 stmt: WRITE L_PAREN IDENTIFIER R_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 72

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   18 exp: IDENTIFIER LB add_exp • RB

    RB   shift, and go to state 91
    ADD  shift, and go to state 56
    SUB  shift, and go to state 57


State 73

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
   45 param_list: add_exp • COMMA
   46           | add_exp •

    COMMA  shift, and go to state 92
    ADD    shift, and go to state 56
    SUB    shift, and go to state 57

    $default  reduce using rule 46 (param_list)


State 74

   40 function_call: IDENTIFIER QM param_list • QM

    QM  shift, and go to state 93


State 75

   14 exp: L_PAREN add_exp R_PAREN •

    $default  reduce using rule 14 (exp)


State 76

    7 add_exp: add_exp • ADD add_exp
    7        | add_exp ADD add_exp •
    8        | add_exp • SUB add_exp

    $default  reduce using rule 7 (add_exp)


State 77

    7 add_exp: add_exp • ADD add_exp
    8        | add_exp • SUB add_exp
    8        | add_exp SUB add_exp •

    $default  reduce using rule 8 (add_exp)


State 78

   10 mul_exp: mul_exp • MUL mul_exp
   10        | mul_exp MUL mul_exp •
   11        | mul_exp • DIV mul_exp

    $default  reduce using rule 10 (mul_exp)


State 79

   10 mul_exp: mul_exp • MUL mul_exp
   11        | mul_exp • DIV mul_exp
   11        | mul_exp DIV mul_exp •

    $default  reduce using rule 11 (mul_exp)


State 80

   19 rel_exp: exp • REL exp
   19        | exp REL exp •

    $default  reduce using rule 19 (rel_exp)


State 81

   51 declaration: type IDENTIFIER LB NUM • RB SEMICOLON

    RB  shift, and go to state 94


State 82

   39 function: type IDENTIFIER QM param_type_list • $@3 QM LC stmts RC

    $default  reduce using rule 38 ($@3)

    $@3  go to state 95


State 83

   41 param_type_list: type • IDENTIFIER COMMA param_type_list
   42                | type • IDENTIFIER LB RB COMMA param_type_list
   43                | type • IDENTIFIER
   44                | type • IDENTIFIER LB RB

    IDENTIFIER  shift, and go to state 96


State 84

   53 assignment: IDENTIFIER LB add_exp RB ASSIGN • add_exp SEMICOLON

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    add_exp        go to state 97
    mul_exp        go to state 36
    exp            go to state 37
    rel_exp        go to state 38
    function_call  go to state 39


State 85

   31 when_stmt: WHEN L_PAREN add_exp R_PAREN LC • stmts RC
   32          | WHEN L_PAREN add_exp R_PAREN LC • stmts RC ELSE LC stmts RC
   33          | WHEN L_PAREN add_exp R_PAREN LC • stmts RC ELSE when_stmt

    IDENTIFIER  shift, and go to state 4
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    stmts          go to state 98
    stmt           go to state 14
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 86

   34 whilst_stmt: WHILST L_PAREN add_exp R_PAREN LC • stmts RC
   35            | WHILST L_PAREN add_exp R_PAREN LC • RC

    IDENTIFIER  shift, and go to state 4
    RC          shift, and go to state 99
    WHEN        shift, and go to state 5
    WHILST      shift, and go to state 6
    DO          shift, and go to state 7
    READ        shift, and go to state 8
    WRITE       shift, and go to state 9
    VOID        shift, and go to state 10
    INT         shift, and go to state 11
    RETURN      shift, and go to state 12

    stmts          go to state 100
    stmt           go to state 14
    return_stmt    go to state 15
    when_stmt      go to state 16
    whilst_stmt    go to state 17
    dowhilst_stmt  go to state 18
    function       go to state 19
    type           go to state 20
    declaration    go to state 21
    assignment     go to state 22


State 87

   19 rel_exp: exp • REL exp
   37 dowhilst_stmt: DO LC RC WHILST exp •

    REL  shift, and go to state 60

    $default  reduce using rule 37 (dowhilst_stmt)


State 88

   36 dowhilst_stmt: DO LC stmts RC WHILST • exp

    NUM         shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    L_PAREN     shift, and go to state 32
    SUB         shift, and go to state 34

    exp            go to state 101
    rel_exp        go to state 38
    function_call  go to state 39


State 89

   22 stmt: READ L_PAREN IDENTIFIER R_PAREN SEMICOLON •

    $default  reduce using rule 22 (stmt)


State 90

   21 stmt: WRITE L_PAREN IDENTIFIER R_PAREN SEMICOLON •

    $default  reduce using rule 21 (stmt)


State 91

   18 exp: IDENTIFIER LB add_exp RB •
